Fix overlapping of main organization title with image on mobiles

--- a/src/components/organisms/organization-card/organization-card.css
+++ b/src/components/organisms/organization-card/organization-card.css
@@ -8,7 +8,7 @@
 	text-align: center;
 	font-size: 34px;
 	font-weight: 500;
-	margin: 20px;
+	margin-top: 60px;
 }
 
 .organizations-container {
@@ -90,5 +90,6 @@
 	.organizations-main-title {
 		font-size: 24px;
 		margin-bottom: 0;
+		margin-top: 60px;
 	}
 }
